# MRI_RECONS

./: .gitignore  CMakeLists.txt  README.md  fermi.py  kernel.cl  kspace.hdr:Zone.Identifier  main.cpp  main.cpp.bak  mri_utils.hpp
multicoil_test/: exporth5.py  h5tocfl.py
